s/minos-startup/minos-autostart/g

--- a/.i3/config.4
+++ b/.i3/config.4
@@ -9,7 +9,7 @@
 
 # execute startup programs
 # exec_always
-exec --no-startup-id minos-startup
+exec --no-startup-id minos-autostart
 
 # ###################################
 # ######## GENERAL SETTINGS #########
